Projetos/ACBr32_DLL/ACBr_C/Exemplo_C/include/ACBr.h

#define DllImport extern "C"
#define DllImport extern

typedef void* ACBR_HANDLE;

typedef char* PCHAR;

typedef char BOOL;


typedef struct
{
      char Indice[4];
      double Aliquota;
      char Tipo;
      double Total;
      char Sequencia;
} AliquotaRec;



typedef struct
{
      char Indice[4];
      char Descricao[30];
      BOOL PermiteVinculado;
      double Total;
} FormaPagamentoRec;


typedef struct
{
    char Indice[4];
    char Descricao[30];
    BOOL PermiteVinculado;
    char FormaPagamento[4];
    double Total;
    int Contador;
} ComprovanteNaoFiscalRec;

/*ECF*/

DllImport int ECF_Create(const ACBR_HANDLE* ecfHandle);

DllImport int ECF_Destroy(const ACBR_HANDLE* ecfHandle);

DllImport int ECF_GetUltimoErro(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_Ativar(const ACBR_HANDLE ecfHandle);

DllImport int ECF_Desativar(const ACBR_HANDLE ecfHandle);

DllImport int ECF_GetModelo(const ACBR_HANDLE ecfHandle);

DllImport int ECF_SetModelo(const ACBR_HANDLE ecfHandle, const int modelo);

DllImport int ECF_GetPorta(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_SetPorta(const ACBR_HANDLE ecfHandle, const PCHAR porta);

DllImport int ECF_GetTimeOut(const ACBR_HANDLE ecfHandle);

DllImport int ECF_SetTimeOut(const ACBR_HANDLE ecfHandle, const int timeOut);

DllImport int ECF_GetAtivo(const ACBR_HANDLE ecfHandle);

DllImport int ECF_GetColunas(const ACBR_HANDLE ecfHandle);

DllImport int ECF_GetAguardandoResposta(const ACBR_HANDLE ecfHandle);

DllImport int ECF_GetComandoEnviado(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetRespostaComando(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetComandoLOG(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_SetComandoLOG(const ACBR_HANDLE ecfHandle, const PCHAR comandoLog);

DllImport int ECF_GetAguardaImpressao(const ACBR_HANDLE ecfHandle);

DllImport int ECF_SetAguardaImpressao(const ACBR_HANDLE ecfHandle, BOOL aguardaImpressao);

DllImport int ECF_GetModeloStr(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetRFDID(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetDataHora(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetNumCupom(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCOO(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumLoja(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumECF(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumSerie(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumVersao(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetDataMovimento(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetDataHoraSB(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetCNPJ(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetIE(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetIM(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetCliche(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetUsuarioAtual(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetSubModeloECF(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetPAF(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCRZ(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCRO(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCCF(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumGNF(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumGRG(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCDC(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCOOInicial(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetVendaBruta(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetGrandeTotal(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetTotalCancelamentos(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetTotalDescontos(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetTotalAcrescimos(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetTotalTroco(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetTotalSubstituicaoTributaria(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetTotalNaoTributado(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetTotalIsencao(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetTotalCancelamentosISSQN(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetTotalDescontosISSQN(const ACBR_HANDLE ecfHandle, double* value);