Projetos/ACBr32_DLL/ACBr.Net/ACBr.Net/ACBrDll.cs

using System;
using System.Text;
using System.Runtime.InteropServices;

namespace ACBr.Net
{
    public static class ACBrDll
    {
        #region ACBrECF

        #region Interop Types

        [StructLayout(LayoutKind.Sequential)]
        public struct AliquotaRec
        {
            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 4)]
            public string Indice;

            [MarshalAs(UnmanagedType.R8)]
            public double Aliquota;

            [MarshalAs(UnmanagedType.U1)]
            public char Tipo;

            [MarshalAs(UnmanagedType.R8)]
            public double Total;

            [MarshalAs(UnmanagedType.U1)]
            public byte Sequencia;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct FormaPagamentoRec
        {
            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 4)]
            public string Indice;

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 30)]
            public string Descricao;

            [MarshalAs(UnmanagedType.U1)]
            public bool PermiteVinculado;

            [MarshalAs(UnmanagedType.R8)]
            public double Total;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct ComprovanteNaoFiscalRec
        {
            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 4)]
            public string Indice;

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 30)]
            public string Descricao;

            [MarshalAs(UnmanagedType.U1)]
            public bool PermiteVinculado;

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 4)]
            public string FormaPagamento;

            [MarshalAs(UnmanagedType.R8)]
            public double Total;

            [MarshalAs(UnmanagedType.I4)]
            public int Contador;
        }

        #endregion Interop Types

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_Create(ref IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_Destroy(ref IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetUltimoErro(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_Ativar(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_Desativar(IntPtr ecfHandle);
        
        #region Propriedades do Componente

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetModelo(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_SetModelo(IntPtr ecfHandle, int modelo);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetPorta(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_SetPorta(IntPtr ecfHandle, string porta);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTimeOut(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_SetTimeOut(IntPtr ecfHandle, int timeOut);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetAtivo(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetColunas(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetAguardandoResposta(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetComandoEnviado(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetRespostaComando(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetComandoLOG(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_SetComandoLOG(IntPtr ecfHandle, string comandoLog);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetAguardaImpressao(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_SetAguardaImpressao(IntPtr ecfHandle, bool aguardaImpressao);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetModeloStr(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetRFDID(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetDataHora(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetNumCupom(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetNumCOO(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetNumLoja(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetNumECF(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetNumSerie(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetNumVersao(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetDataMovimento(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetDataHoraSB(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetCNPJ(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetIE(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetIM(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetCliche(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetUsuarioAtual(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetSubModeloECF(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);
        
        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetPAF(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetNumCRZ(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetNumCRO(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetNumCCF(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetNumGNF(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetNumGRG(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetNumCDC(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetNumCOOInicial(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetVendaBruta(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetGrandeTotal(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTotalCancelamentos(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTotalDescontos(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTotalAcrescimos(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTotalTroco(IntPtr ecfHandle, ref double value);
        
        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTotalSubstituicaoTributaria(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTotalNaoTributado(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTotalIsencao(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTotalCancelamentosISSQN(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTotalDescontosISSQN(IntPtr ecfHandle, ref double value);
